--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -473,6 +473,7 @@ services:
     volumes:
       - ./volumes/logs/vector.yml:/etc/vector/vector.yml:ro,z
       - ${DOCKER_SOCKET_LOCATION}:/var/run/docker.sock:ro,z
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
     healthcheck:
       test:
         [
@@ -494,7 +495,8 @@ services:
         "/etc/vector/vector.yml"
       ]
     security_opt:
-      - "label=disable"
+      - "apparmor=unconfined"
+      - "seccomp=unconfined"
 
   # Update the DATABASE_URL if you are using an external Postgres database
   supavisor:
