--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -472,7 +472,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./volumes/logs/vector.yml:/etc/vector/vector.yml:ro,z
-      - ${DOCKER_SOCKET_LOCATION}:/var/run/docker.sock:ro,z
+      - /var/run/docker.sock:/var/run/docker.sock:ro,z
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
     healthcheck:
       test:
