--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -475,18 +475,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro,z
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://vector:9001/health"
-        ]
-      timeout: 5s
-      interval: 5s
-      retries: 3
+      disable: true
     environment:
       LOGFLARE_PUBLIC_ACCESS_TOKEN: ${LOGFLARE_PUBLIC_ACCESS_TOKEN}
     command:
